chore: adopt oxlint and oxfmt (#139)
