# e2e/swagger.json
@@ -14,16 +14,9 @@
     }
   },
   "basePath": "/api",
-  "schemes": [
-    "https",
-    "http"
-  ],
-  "produces": [
-    "application/json"
-  ],
-  "consumes": [
-    "application/json"
-  ],
+  "schemes": ["https", "http"],
+  "produces": ["application/json"],
+  "consumes": ["application/json"],
   "securityDefinitions": {
     "Token": {
       "description": "For accessing the protected API resources, you must have received a a valid JWT token after registering or logging in. This JWT token must then be used for all protected resources by passing it in via the 'Authorization' header.\n\nA JWT token is generated by the API by either registering via /users or logging in via /users/login.\n\nThe following format must be in the 'Authorization' header :\n\n    Token: xxxxxx.yyyyyyy.zzzzzz\n    \n",
@@ -37,9 +30,7 @@
       "post": {
         "summary": "Existing user login",
         "description": "Login for existing user",
-        "tags": [
-          "User and Authentication"
-        ],
+        "tags": ["User and Authentication"],
         "operationId": "Login",
         "parameters": [
           {
@@ -75,9 +66,7 @@
       "post": {
         "summary": "Register a new user",
         "description": "Register a new user",
-        "tags": [
-          "User and Authentication"
-        ],
+        "tags": ["User and Authentication"],
         "operationId": "CreateUser",
         "parameters": [
           {
@@ -108,9 +97,7 @@
       "get": {
         "summary": "Get current user",
         "description": "Gets the currently logged-in user",
-        "tags": [
-          "User and Authentication"
-        ],
+        "tags": ["User and Authentication"],
         "security": [
           {
             "Token": []
@@ -138,9 +125,7 @@
       "put": {
         "summary": "Update current user",
         "description": "Updated user information for current user",
-        "tags": [
-          "User and Authentication"
-        ],
+        "tags": ["User and Authentication"],
         "security": [
           {
             "Token": []
@@ -181,9 +166,7 @@
       "get": {
         "summary": "Get a profile",
         "description": "Get a profile of a user of the system. Auth is optional",
-        "tags": [
-          "Profile"
-        ],
+        "tags": ["Profile"],
         "operationId": "GetProfileByUsername",
         "parameters": [
           {
@@ -217,9 +200,7 @@
       "post": {
         "summary": "Follow a user",
         "description": "Follow a user by username",
-        "tags": [
-          "Profile"
-        ],
+        "tags": ["Profile"],
         "security": [
           {
             "Token": []
@@ -256,9 +237,7 @@
       "delete": {
         "summary": "Unfollow a user",
         "description": "Unfollow a user by username",
-        "tags": [
-          "Profile"
-        ],
+        "tags": ["Profile"],
         "security": [
           {
             "Token": []
@@ -297,9 +276,7 @@
       "get": {
         "summary": "Get recent articles from users you follow",
         "description": "Get most recent articles from users you follow. Use query parameters to limit. Auth is required",
-        "tags": [
-          "Articles"
-        ],
+        "tags": ["Articles"],
         "security": [
           {
             "Token": []
@@ -347,9 +324,7 @@
       "get": {
         "summary": "Get recent articles globally",
         "description": "Get most recent articles globally. Use query parameters to filter results. Auth is optional",
-        "tags": [
-          "Articles"
-        ],
+        "tags": ["Articles"],
         "operationId": "GetArticles",
         "parameters": [
           {
@@ -411,9 +386,7 @@
       "post": {
         "summary": "Create an article",
         "description": "Create an article. Auth is required",
-        "tags": [
-          "Articles"
-        ],
+        "tags": ["Articles"],
         "security": [
           {
             "Token": []
@@ -454,9 +427,7 @@
       "get": {
         "summary": "Get an article",
         "description": "Get an article. Auth not required",
-        "tags": [
-          "Articles"
-        ],
+        "tags": ["Articles"],
         "operationId": "GetArticle",
         "parameters": [
           {
@@ -485,9 +456,7 @@
       "put": {
         "summary": "Update an article",
         "description": "Update an article. Auth is required",
-        "tags": [
-          "Articles"
-        ],
+        "tags": ["Articles"],
         "security": [
           {
             "Token": []
@@ -533,9 +502,7 @@
       "delete": {
         "summary": "Delete an article",
         "description": "Delete an article. Auth is required",
-        "tags": [
-          "Articles"
-        ],
+        "tags": ["Articles"],
         "security": [
           {
             "Token": []
@@ -571,9 +538,7 @@
       "get": {
         "summary": "Get comments for an article",
         "description": "Get the comments for an article. Auth is optional",
-        "tags": [
-          "Comments"
-        ],
+        "tags": ["Comments"],
         "operationId": "GetArticleComments",
         "parameters": [
           {
@@ -605,9 +570,7 @@
       "post": {
         "summary": "Create a comment for an article",
         "description": "Create a comment for an article. Auth is required",
-        "tags": [
-          "Comments"
-        ],
+        "tags": ["Comments"],
         "security": [
           {
             "Token": []
@@ -655,9 +618,7 @@
       "delete": {
         "summary": "Delete a comment for an article",
         "description": "Delete a comment for an article. Auth is required",
-        "tags": [
-          "Comments"
-        ],
+        "tags": ["Comments"],
         "security": [
           {
             "Token": []
@@ -700,9 +661,7 @@
       "post": {
         "summary": "Favorite an article",
         "description": "Favorite an article. Auth is required",
-        "tags": [
-          "Favorites"
-        ],
+        "tags": ["Favorites"],
         "security": [
           {
             "Token": []
@@ -739,9 +698,7 @@
       "delete": {
         "summary": "Unfavorite an article",
         "description": "Unfavorite an article. Auth is required",
-        "tags": [
-          "Favorites"
-        ],
+        "tags": ["Favorites"],
         "security": [
           {
             "Token": []
@@ -809,10 +766,7 @@
           "format": "password"
         }
       },
-      "required": [
-        "email",
-        "password"
-      ]
+      "required": ["email", "password"]
     },
     "LoginUserRequest": {
       "type": "object",
@@ -821,9 +775,7 @@
           "$ref": "#/definitions/LoginUser"
         }
       },
-      "required": [
-        "user"
-      ]
+      "required": ["user"]
     },
     "NewUser": {
       "type": "object",
@@ -839,11 +791,7 @@
           "format": "password"
         }
       },
-      "required": [
-        "username",
-        "email",
-        "password"
-      ]
+      "required": ["username", "email", "password"]
     },
     "NewUserRequest": {
       "type": "object",
@@ -852,9 +800,7 @@
           "$ref": "#/definitions/NewUser"
         }
       },
-      "required": [
-        "user"
-      ]
+      "required": ["user"]
     },
     "User": {
       "type": "object",
@@ -875,13 +821,7 @@
           "type": "string"
         }
       },
-      "required": [
-        "email",
-        "token",
-        "username",
-        "bio",
-        "image"
-      ]
+      "required": ["email", "token", "username", "bio", "image"]
     },
     "UserResponse": {
       "type": "object",
@@ -890,9 +830,7 @@
           "$ref": "#/definitions/User"
         }
       },
-      "required": [
-        "user"
-      ]
+      "required": ["user"]
     },
     "UpdateUser": {
       "type": "object",
@@ -921,9 +859,7 @@
           "$ref": "#/definitions/UpdateUser"
         }
       },
-      "required": [
-        "user"
-      ]
+      "required": ["user"]
     },
     "ProfileResponse": {
       "type": "object",
@@ -932,9 +868,7 @@
           "$ref": "#/definitions/Profile"
         }
       },
-      "required": [
-        "profile"
-      ]
+      "required": ["profile"]
     },
     "Profile": {
       "type": "object",
@@ -952,12 +886,7 @@
           "type": "boolean"
         }
       },
-      "required": [
-        "username",
-        "bio",
-        "image",
-        "following"
-      ]
+      "required": ["username", "bio", "image", "following"]
     },
     "Article": {
       "type": "object",
@@ -1018,9 +947,7 @@
           "$ref": "#/definitions/Article"
         }
       },
-      "required": [
-        "article"
-      ]
+      "required": ["article"]
     },
     "MultipleArticlesResponse": {
       "type": "object",
@@ -1035,10 +962,7 @@
           "type": "integer"
         }
       },
-      "required": [
-        "articles",
-        "articlesCount"
-      ]
+      "required": ["articles", "articlesCount"]
     },
     "NewArticle": {
       "type": "object",
@@ -1059,11 +983,7 @@
           }
         }
       },
-      "required": [
-        "title",
-        "description",
-        "body"
-      ]
+      "required": ["title", "description", "body"]
     },
     "NewArticleRequest": {
       "type": "object",
@@ -1072,9 +992,7 @@
           "$ref": "#/definitions/NewArticle"
         }
       },
-      "required": [
-        "article"
-      ]
+      "required": ["article"]
     },
     "UpdateArticle": {
       "type": "object",
@@ -1097,9 +1015,7 @@
           "$ref": "#/definitions/UpdateArticle"
         }
       },
-      "required": [
-        "article"
-      ]
+      "required": ["article"]
     },
     "Comment": {
       "type": "object",
@@ -1122,13 +1038,7 @@
           "$ref": "#/definitions/Profile"
         }
       },
-      "required": [
-        "id",
-        "createdAt",
-        "updatedAt",
-        "body",
-        "author"
-      ]
+      "required": ["id", "createdAt", "updatedAt", "body", "author"]
     },
     "SingleCommentResponse": {
       "type": "object",
@@ -1137,9 +1047,7 @@
           "$ref": "#/definitions/Comment"
         }
       },
-      "required": [
-        "comment"
-      ]
+      "required": ["comment"]
     },
     "MultipleCommentsResponse": {
       "type": "object",
@@ -1151,9 +1059,7 @@
           }
         }
       },
-      "required": [
-        "comments"
-      ]
+      "required": ["comments"]
     },
     "NewComment": {
       "type": "object",
@@ -1162,9 +1068,7 @@
           "type": "string"
         }
       },
-      "required": [
-        "body"
-      ]
+      "required": ["body"]
     },
     "NewCommentRequest": {
       "type": "object",
@@ -1173,9 +1077,7 @@
           "$ref": "#/definitions/NewComment"
         }
       },
-      "required": [
-        "comment"
-      ]
+      "required": ["comment"]
     },
     "TagsResponse": {
       "type": "object",
@@ -1187,9 +1089,7 @@
           }
         }
       },
-      "required": [
-        "tags"
-      ]
+      "required": ["tags"]
     },
     "GenericErrorModel": {
       "type": "object",
@@ -1204,14 +1104,10 @@
               }
             }
           },
-          "required": [
-            "body"
-          ]
+          "required": ["body"]
         }
       },
-      "required": [
-        "errors"
-      ]
+      "required": ["errors"]
     }
   }
 }
